fix: safari SVG mask compatibility on mobile devices

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -611,10 +611,8 @@ textarea {
   overflow: visible;
   background: transparent;
   line-height: 0;
-  -webkit-mask: url(#watercolor-mask);
-  mask: url(#watercolor-mask);
-  -webkit-mask-image: url(#watercolor-mask);
-  mask-image: url(#watercolor-mask);
+  -webkit-mask-image: url('#watercolor-mask');
+  mask-image: url('#watercolor-mask');
   transform-style: flat !important;
   perspective: none !important;
 }
